[package]
name = "tutor-db"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "iter1"

[[bin]]
name = "iter2"

[dependencies]
#Actix web framework and run-time
actix-web = "4.1.0"
actix-rt = "2.7.0"
#Environment variable access libraries
dotenv = "0.15.0"

#Postgres access library
sqlx = {version = "0.6.2", default-features = false, features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"]}

serde = { version = "1.0.144", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }

openssl = { version = "0.10.41", features = ["vendored"] }

