[package]
name = "tutor-nodb"
version = "0.1.0"
edition = "2024"
default-run="tutor-service"
authors = ["jason"]

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

[dependencies]
actix-web = "3.0.0"
actix-rt = "1.1.1"

serde = { version = "1.0.110", features = ["derive"] }
chrono = { version = "0.4.11", features = ["serde"] }